[ledger] Prevent text wrapp within cleared/pending minibanner.

--- a/apps/ledger/src/app/transaction-list/transaction-list.component.css
+++ b/apps/ledger/src/app/transaction-list/transaction-list.component.css
@@ -62,6 +62,7 @@ TR, TD {
     text-align: center;
     font-weight: bold;
     background-color: lemonchiffon;
+    white-space: nowrap;
 }
 
 .pager {
